# espressoTester

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  gitMessage.txt
MSC/: valgrind.txt
SORT/: espressoTester_run.sh  getDccaffeModelCode.cpp
inc/: espressoTester.hpp
include/: espressoTester.hpp
scripts/: caffePostProcess.py  caffePython.py  caffePython1.py  caffePythonRun.py  caffePythonRun.py.bak  output_golden.txt  rfcn.py  top1Accuracy.txts  top5Accuracy.txt
src/: espressoTester.cpp  espressoTester.cppbak1  espressoTester.cppbak2  espressoTester.cppbak5  espressoTesterMain.cpp  espressoTesterMain.cppbak  espressoTesterMain.cppbak0
